fix windows compile error

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,64 @@
-/out/	
+*.gypcmd
+*.mk
+*.ncb
+*.opensdf
+*.orig
+*.props
+*.pyc
+*.rules
+*.sdf
+*.sln
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.targets
+*.user
+*.vcproj
+*.vcxproj
+*.vcxproj.filters
+*.vpj
+*.vpw
+*.vpwhistu
+*.vtg
+*.xcodeproj
+*.xcworkspace
+*_proto.xml
+*_proto_cpp.xml
+*~
+!Android.mk
+.*.sw?
+.DS_Store
+.classpath
+.cproject
+.gdb_history
+.gdbinit
+.landmines
+.metadata
+.project
+.pydevproject
+.checkstyle
+cscope.*
+Session.vim
+tags
+Thumbs.db
+# Settings directories for eclipse
+/.externalToolBuilders/
+/.settings/
+/_out
+/android_emulator_sdk
+/ash/ash_unittests_run.xml
+/base/base_unittests_run.xml
+/build/Debug
+/build/Debug_x64
+/build/gomacc.lock
+/build/ipch/
+/build/Release
+/build/Release_x64
+/build/win_toolchain.json
+/build/util/LASTCHANGE*
+/build/util/support
+/build/x64/
+/build/linux/bin/eu-strip
+/build/linux/debian_*-sysroot/
+/out
+log.txt
